app talking to kafka broker

--- a/singlecomp/.odo/env/env.yaml
+++ b/singlecomp/.odo/env/env.yaml
@@ -1,9 +1,5 @@
 ComponentSettings:
-  Name: reactive
+  Name: myreact
   Namespace: reactive
   AppName: app
-  Link:
-  - name: reactive-kafka-kafka-cluster
-    servicekind: Kafka
-    servicename: kafka-cluster
   RunMode: run
