--- a/singlecomp/src/main/resources/META-INF/microprofile-config.properties
+++ b/singlecomp/src/main/resources/META-INF/microprofile-config.properties
@@ -3,24 +3,16 @@
 mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka-cluster-kafka-bootstrap.reactive.svc:9092
 # end::kafkaConfig[]
 
-# systemLoad stream
-# tag::systemLoad[]
-# tag::kafka1[]
-mp.messaging.incoming.systemLoad.connector=liberty-kafka
-# end::kafka1[]
-# tag::topic1[]
-mp.messaging.incoming.systemLoad.topic=systemLoadTopic
-mp.messaging.outgoing.systemLoad.connector=liberty-kafka
-# end::topic1[]
-# tag::deserializer1[]
-mp.messaging.incoming.systemLoad.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.outgoing.systemLoad.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-# end::deserializer1[]
-# tag::deserializerVal1[]
-mp.messaging.incoming.systemLoad.value.deserializer=io.openliberty.guides.models.SystemLoad$SystemLoadDeserializer
-mp.messaging.outgoing.systemLoad.value.serializer=io.openliberty.guides.models.SystemLoad$SystemLoadSerializer
-# end::deserializerVal1[]
-# tag::group1[]
-mp.messaging.incoming.systemLoad.group.id=system-load-status
-# end::group1[]
-# end::systemLoad[]
+# systemLoad incoming stream
+mp.messaging.incoming.systemLoadIncoming.connector=liberty-kafka
+mp.messaging.incoming.systemLoadIncoming.topic=systemLoadTopic
+mp.messaging.incoming.systemLoadIncoming.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.systemLoadIncoming.value.deserializer=io.openliberty.guides.models.SystemLoad$SystemLoadDeserializer
+mp.messaging.incoming.systemLoadIncoming.group.id=system-load-status
+
+# systemLoad outgoing stream
+mp.messaging.outgoing.systemLoadOutgoing.connector=liberty-kafka
+mp.messaging.outgoing.systemLoadOutgoing.topic=systemLoadTopic
+mp.messaging.outgoing.systemLoadOutgoing.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.systemLoadOutgoing.value.serializer=io.openliberty.guides.models.SystemLoad$SystemLoadSerializer
+
